--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -5,24 +5,8 @@
     </div>
     <div class="body">
         <div bind-component="SimpleBindingComponent"></div>
-        
-        <div bind-for="testArray;item;track">
-            <div bind="item.value" bind-event="click:testClick" bind-class="green-item:greenStyledItem"></div>
-            <div bind="item.testProp" bind-event="click:testClick" bind-class="blue-item:blueStyledItem"></div>
-        </div>
-        <div bind-for="testArray;item;track">
-            <div>
-                <div>
-                    <div bind-class="green-item:greenStyledItem" bind="item.value" bind-event="click:testClick"></div>
-                </div>
-            </div>
-        </div>
-        <div bind-class="hover-class1:testHover,hover-class2:!testHover">
-            I am hovered
-        </div>
-        <button bind-event="mouseenter:onMouseOver,mouseleave:onMouseLeft">
-            Hover me
-        </button>
+        <div bind-component="RepeatableComponent"></div>
+        <div bind-component="EventsSampleComponent"></div>
         <div bind-component="DashboardComponent"></div>
     </div>
 </div>
