--- a/src/app/simple-binding-component/simple-binding.component.html
+++ b/src/app/simple-binding-component/simple-binding.component.html
@@ -1,6 +1,6 @@
 <div class="simple-binding-root">
     <div class="section-content">
-        <label>Simple binding example</label>
+        <label class="label medium">Simple binding example</label>
         <div bind-text="testProperty"></div>
         <input type="text" bind-value="testProperty" bind-event="keydown:onValueChanged" />  
     </div>
