--- a/src/app/dashboard-component/dashboard.component.html
+++ b/src/app/dashboard-component/dashboard.component.html
@@ -1,5 +1,8 @@
-<div class="root">
-    <div>Dashboard</div>
-    <div bind-text="myProperty1"></div>
-    <button bind-event="click:getData">get data</button>
+<div class="dashboard-component-root">
+    <div class="section-content">
+        <label class="label medium">Working with services</label>
+        <div>Dashboard</div>
+        <div bind-text="myProperty1"></div>
+        <button bind-event="click:getData">get data</button>
+    </div>
 </div>
