--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -4,8 +4,8 @@
         <div class="shark-js-logo"></div>
     </div>
     <div class="body">
-        <div bind-component="SimpleBindingComponent"></div>
-        <div bind-component="RepeatableComponent"></div>
+        <div bind-component="SimpleBindingSampleComponent"></div>
+        <div bind-component="RepeatableSampleComponent"></div>
         <div bind-component="EventsSampleComponent"></div>
         <div bind-component="DashboardComponent"></div>
     </div>
