--- a/src/app/views/app-root/app-root.component.scss
+++ b/src/app/views/app-root/app-root.component.scss
@@ -1,14 +1,3 @@
-html, body, [bind-component="AppComponent"] {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-* {
-    color: rgb(0, 0, 0)!important;
-}
-
 .app-component-root {
     height: 100%;
     display: flex;
@@ -34,7 +23,7 @@ html, body, [bind-component="AppComponent"] {
     }
 
     .shark-js-logo {
-        background-image: url('../assets/shark_js_logo.png');
+        background-image: url('../../assets/shark_js_logo.png');
         background-position: center center;
         background-size: 64px 64px;
         height: 64px;
