Added deep binding functionality.

--- a/src/app/components/dashboard-component/dashboard.component.html
+++ b/src/app/components/dashboard-component/dashboard.component.html
@@ -3,6 +3,6 @@
         <label class="label medium">Working with services</label>
         <div>Dashboard</div>
         <div bind-text="myProperty1"></div>
-        <button bind-event="click:getData">get data</button>
+        <button bind-event="click:getData">Get data</button>
     </div>
 </div>
