--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="body">
         <div bind-component="SimpleBindingSampleComponent"></div>
-        <div bind-component="RepeatableSampleComponent"></div>
+        <!-- <div bind-component="RepeatableSampleComponent"></div>
         <div bind-component="EventsSampleComponent"></div>
-        <div bind-component="DashboardComponent"></div>
+        <div bind-component="DashboardComponent"></div> -->
     </div>
 </div>
