--- a/src/app/views/conditions-sample/conditions-sample.component.html
+++ b/src/app/views/conditions-sample/conditions-sample.component.html
@@ -4,6 +4,7 @@
         <div bind-if="visible">
             Content for hide/show
         </div>
+        <div bind-component="SimpleBindingSampleComponent" bind-if="visible"></div>
         <button bind-event="click:onShow">
             Show
         </button>
