--- a/src/app/views/simple-binding-sample/simple-binding-sample.component.html
+++ b/src/app/views/simple-binding-sample/simple-binding-sample.component.html
@@ -9,7 +9,13 @@
 
         <div>
             <label class="label small">Component property bindings from outside</label>
-            <div bind-text="isVisibleProperty"></div>
+            <div>
+                <span>isVisibleProperty value - </span>
+                <span bind-text="isVisibleProperty"></span>
+            </div>
+            <button bind-event="click:changeVisibleProperty">
+                Change isVisibleProperty
+            </button>
         </div>
     </div>
 </div>
