Added monaco editor for test purposes.

--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -4,10 +4,11 @@
         <div class="shark-js-logo"></div>
     </div>
     <div class="body">
-        <div bind-component="SimpleBindingSampleComponent"></div>
+        <!-- <div bind-component="SimpleBindingSampleComponent"></div>
         <div bind-component="RepeatableSampleComponent"></div>
         <div bind-component="EventsSampleComponent"></div>
         <div bind-component="DashboardComponent"></div>
-        <div bind-component="ConditionsSampleComponent"></div>
+        <div bind-component="ConditionsSampleComponent"></div> -->
+        <div bind-component="MonacoEditorComponent"></div>
     </div>
 </div>
