Reworks. Bug fixes. Sample showing. Highlighting of code etc.

--- a/src/app/components/monaco-editor-component/monaco-editor.component.html
+++ b/src/app/components/monaco-editor-component/monaco-editor.component.html
@@ -8,9 +8,9 @@
         <div class="first-container">
             <div class="editor-html"></div>
         </div>
-        <!-- <div class="middle-container">
+        <div class="middle-container">
             <div class="editor-ts"></div>
-        </div> -->
+        </div>
         <div class="third-container">
             <div class="render-container"></div>
         </div>
