--- a/src/app/components/monaco-editor-component/monaco-editor.component.scss
+++ b/src/app/components/monaco-editor-component/monaco-editor.component.scss
@@ -4,7 +4,7 @@
     .third-container {
         display: inline-block;
         height: 800px;
-        width: 1000px;
+        width: 48%;
     }
 
     .third-container {
