--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -4,11 +4,31 @@
         <div class="shark-js-logo"></div>
     </div>
     <div class="body">
-        <!-- <div bind-component="SimpleBindingSampleComponent"></div>
-        <div bind-component="RepeatableSampleComponent"></div>
-        <div bind-component="EventsSampleComponent"></div>
-        <div bind-component="DashboardComponent"></div>
-        <div bind-component="ConditionsSampleComponent"></div> -->
-        <div bind-component="MonacoEditorComponent"></div>
+        <div class="navigation-panel">
+            <label class="samples-title label medium">Samples</label>
+            <hr />
+            <div bind-for="components;component;idx">
+                <div class="navigation-btn" bind-event="click:onSelectPage:{component}">
+                    <div class="gear-icon"></div>
+                    <div class="btn-title" bind="component.title"></div>
+                </div>
+            </div>
+        </div>
+        <div class="selected-page-content">
+            <div bind-if="components[0].visible" bind-component="SimpleBindingSampleComponent"></div>
+            <div bind-if="components[1].visible" bind-component="RepeatableSampleComponent"></div>
+            <div bind-if="components[2].visible" bind-component="EventsSampleComponent"></div>
+            <div bind-if="components[3].visible" bind-component="ConditionsSampleComponent"></div>
+            
+            <div class="section-content">
+                <label class="label medium">HTML</label>
+                <code id="highlight-container-html" bind-text="selectedComponentData.html"></code>
+            </div>
+            <div class="section-content">
+                <label class="label medium">TypeScript</label>
+                <code id="highlight-container-ts" bind-text="selectedComponentData.ts"></code>
+            </div>
+
+        </div>
     </div>
 </div>
