--- a/src/app/views/app-root/app-root.component.scss
+++ b/src/app/views/app-root/app-root.component.scss
@@ -42,7 +42,7 @@
         margin: 20px;
         border-radius: 5px;
         box-shadow: 8px 8px 12px black;
-        // background-color: #323b4760;
+        background-color: #27282244;
     }
 
     .navigation-panel {
