--- a/src/app/views/conditions-sample/conditions-sample.component.html
+++ b/src/app/views/conditions-sample/conditions-sample.component.html
@@ -12,7 +12,10 @@
         </button>
     
         <div>
-            <label class="label small">visible as property of this context is <span bind-text="visible"></span></label>
+            <label class="label small">
+                visible as property of this context is 
+                <span bind-text="visible"></span>
+            </label>
         </div>
     </div>
 </div>
