--- a/src/app/views/simple-binding-sample/simple-binding-sample.component.html
+++ b/src/app/views/simple-binding-sample/simple-binding-sample.component.html
@@ -4,11 +4,17 @@
         <div bind-text="testProperty"></div>
         <div bind-text="complexObject.property1"></div>
         <div bind-text="complexObject.deepProperty.test"></div>
-        <input type="text" bind-value="complexObject.deepProperty.test" bind-event="keydown:onDeepValueChanged" />
-        <input type="text" bind-value="testProperty" bind-event="keydown:onValueChanged" />
+        <input type="text" 
+                bind-value="complexObject.deepProperty.test" 
+                bind-event="keydown:onDeepValueChanged" />
+        <input type="text" 
+                bind-value="testProperty" 
+                bind-event="keydown:onValueChanged" />
 
         <div>
-            <label bind-if="isVisibleProperty" class="label small">Component property bindings from outside</label>
+            <label bind-if="isVisibleProperty" class="label small">
+                Component property bindings from outside
+            </label>
             <div>
                 <span>isVisibleProperty value - </span>
                 <span bind-text="isVisibleProperty"></span>
