Fix http client and implement full view with real data.

--- a/src/app/views/html-client-sample/http-client-sample.component.html
+++ b/src/app/views/html-client-sample/http-client-sample.component.html
@@ -4,5 +4,14 @@
         <button bind-event="click:getData">
             Get data via HttpClient
         </button>
+        <div bind-if="isLoading" class="ajax-loader"></div>
+        <div bind-if="showData">
+            <label class="label small">Punchline:</label>
+            <div bind-text="viewModel.punchline"></div>
+            <label class="label small">Setup:</label>
+            <div bind-text="viewModel.setup"></div>
+            <label class="label small">Type:</label>
+            <div bind-text="viewModel.type"></div>
+        </div>
     </div>
 </div>
