--- a/src/app/views/app-root/app-root.component.scss
+++ b/src/app/views/app-root/app-root.component.scss
@@ -42,7 +42,7 @@
         border-radius: 5px;
         box-shadow: 8px 8px 12px black;
         max-width: 800px;
-        overflow: auto;
+        overflow-x: auto;
     }
 
     .navigation-panel {
