--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -1,6 +1,6 @@
 <div class="app-component-root">
     <div class="header">
-        <div class="label big">SharkJS</div>
+        <div class="label big">Shark</div>
         <div class="shark-js-logo"></div>
     </div>
     <div class="body">
