--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -1,7 +1,7 @@
 <div class="app-component-root">
     <div class="header">
-        <div class="label big">Shark</div>
         <div class="shark-js-logo"></div>
+        <div class="label big">SharK</div>
     </div>
     <div class="body">
         <div class="navigation-panel">
@@ -33,5 +33,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="footer">
+        <div>® Vladimir Parchev in 2025</div>
+        <div class="shark-js-logo"></div>
     </div>
 </div>
