--- a/src/app/views/app-root/app-root.component.scss
+++ b/src/app/views/app-root/app-root.component.scss
@@ -9,8 +9,21 @@
         padding: 20px;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
+        flex: 1 auto;
+        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+0,828c95+36,28343b+100;Grey+Black+3D */
+        background: linear-gradient(to bottom,  #b5bdc8 0%,#828c95 36%,#28343b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        box-shadow: 0 0 81px black;
+        z-index: 1;
+    }
+
+    .footer {
+        padding: 5px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: end;
         flex: 1 auto;
         /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+0,828c95+36,28343b+100;Grey+Black+3D */
         background: linear-gradient(to bottom,  #b5bdc8 0%,#828c95 36%,#28343b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -25,15 +38,6 @@
         flex-direction: row;
         justify-content: stretch;
         align-items: stretch;
-    }
-
-    .shark-js-logo {
-        background-image: url('../../assets/shark_js_logo.png');
-        background-position: center center;
-        background-size: 64px 64px;
-        height: 64px;
-        width: 64px;
-        display: inline-block; 
     }
 
     .section-content {
@@ -144,4 +148,13 @@
         font-size: 35px!important;
         
     }
+}
+
+.shark-js-logo {
+    background-image: url('../../assets/shark_js_logo.png');
+    background-position: center center;
+    background-size: 64px 64px;
+    height: 64px;
+    width: 64px;
+    display: inline-block; 
 }
