--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -33,3 +33,8 @@ html, body, [bind-component="AppRootComponent"] {
     scrollbar-color: #000000 #f1f1f1;
     /* Thumb and track color */
 }
+
+/* Remove focus outline for mouse users */
+*:focus-visible {
+    outline: none;
+}
