--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -21,6 +21,7 @@
             <div bind-if="components[4].visible" bind-component="ConditionsSampleComponent"></div>
             <div bind-if="components[5].visible" bind-component="HttpClientSampleComponent"></div>
             <div bind-if="components[6].visible" bind-component="PropertyBindingsSampleComponent"></div>
+            <div bind-if="components[7].visible" bind-component="FormsBindingSampleComponent"></div>
             
             <div bind-if="codingSectionVisible">
                 <div class="section-content">
