--- a/src/app/components/drop-down/drop-down.component.scss
+++ b/src/app/components/drop-down/drop-down.component.scss
@@ -23,6 +23,8 @@
         top: 0;
         left: 0;
         width: 95%;
+        z-index: 999;
+        background-color: #384452;
     }
 
     .body-item {
