--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="footer">
-        <div>® Vladimir Parchev in 2025</div>
+        <div>© Vladimir Parchev in 2025 ®</div>
         <div class="shark-js-logo"></div>
     </div>
 </div>
