--- a/src/app/components/clock/clock.component.scss
+++ b/src/app/components/clock/clock.component.scss
@@ -29,5 +29,16 @@
         background-color: #13171c;
         color: white;
         cursor: grab;
+        position: relative;
+        .grab-handle {
+            display: inline-block;
+            padding: 0 30px;
+            background-color: #333e4b;
+            position: absolute;
+            top: -10px;
+            left: 35%;
+            border-radius: 5px;
+            border: 1px solid #000000;
+        }
     }
 }
