--- a/src/app/views/forms-binding-sample/forms-binding-sample.component.html
+++ b/src/app/views/forms-binding-sample/forms-binding-sample.component.html
@@ -29,7 +29,7 @@
             <div>
                 <label>Field with custom validator:</label>
                 <input type="number" 
-                    bind-value="formData.customNumberValue" 
+                    bind-value="customNumberValue" 
                     bind-event="input:onInputChange"
                     bind-class="invalid:customNumberValidation.invalid"
                     required />
