--- a/src/app/views/app-root/app-root.component.scss
+++ b/src/app/views/app-root/app-root.component.scss
@@ -125,6 +125,10 @@
         white-space: pre;
         // background-color: #282c34;
     }
+
+    #highlight-container-sass {
+        white-space: pre;
+    }
 }
 
 .label {
