--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -23,7 +23,6 @@
             <div bind-if="components[5].visible" bind-component="HttpClientSampleComponent"></div>
             <div bind-if="components[6].visible" bind-component="PropertyBindingsSampleComponent"></div>
             <div bind-if="components[7].visible" bind-component="FormsBindingSampleComponent"></div>
-            <!-- <div bind-if="components[8].visible" bind-component="ClockComponent"></div> -->
             <div bind-if="components[9].visible" bind-component="DropDownComponent"></div>
             
             <div bind-if="codingSectionVisible">
@@ -34,6 +33,10 @@
                 <div class="section-content">
                     <label class="label medium">TypeScript</label>
                     <code id="highlight-container-ts" bind-text="selectedComponentData.ts"></code>
+                </div>
+                <div class="section-content">
+                    <label class="label medium">SASS</label>
+                    <code id="highlight-container-sass" bind-text="selectedComponentData.sass"></code>
                 </div>
             </div>
         </div>
