App version added.

--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <div class="shark-js-logo"></div>
         <div class="label big">SharK</div>
-        <div bind-component="ClockComponent"></div>
+        <div bind-component="ClockComponent"></div>        
     </div>
     <div class="body">
         <div class="navigation-panel">
@@ -42,7 +42,8 @@
         </div>
     </div>
     <div class="footer">
-        <div>© Vladimir Parchev in 2025 ®</div>
+        <div class="app-version" bind-text="appVersion"></div>
+        <div class="copyright-text">© Vladimir Parchev in 2025 ®</div>
         <div class="shark-js-logo"></div>
     </div>
 </div>
