--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -6,24 +6,32 @@
     </div>
     <div class="body">
         <div class="navigation-panel">
-            <label class="samples-title label medium">Samples</label>
+            <label class="samples-title label medium">Core</label>
+            <hr />
+            <div bind-for="componentSamples;component;idx">
+                <div class="navigation-btn" bind-event="click:onSelectPage:{component}">
+                    <div class="gear-icon"></div>
+                    <div class="btn-title" bind="component.title"></div>
+                </div>
+            </div>
+            <label class="samples-title label medium">Components</label>
             <hr />
             <div bind-for="components;component;idx">
-                <div class="navigation-btn" bind-event="click:onSelectPage:{component}">
+                <div class="navigation-btn" bind-event="click:onSelectComponent:{component}">
                     <div class="gear-icon"></div>
                     <div class="btn-title" bind="component.title"></div>
                 </div>
             </div>
         </div>
         <div class="selected-page-content">
-            <div bind-if="components[1].visible" bind-component="SimpleBindingSampleComponent"></div>
-            <div bind-if="components[2].visible" bind-component="RepeatableSampleComponent"></div>
-            <div bind-if="components[3].visible" bind-component="EventsSampleComponent"></div>
-            <div bind-if="components[4].visible" bind-component="ConditionsSampleComponent"></div>
-            <div bind-if="components[5].visible" bind-component="HttpClientSampleComponent"></div>
-            <div bind-if="components[6].visible" bind-component="PropertyBindingsSampleComponent"></div>
-            <div bind-if="components[7].visible" bind-component="FormsBindingSampleComponent"></div>
-            <div bind-if="components[9].visible" bind-component="DropDownComponent"></div>
+            <div bind-if="componentSamples[1].visible" bind-component="SimpleBindingSampleComponent"></div>
+            <div bind-if="componentSamples[2].visible" bind-component="RepeatableSampleComponent"></div>
+            <div bind-if="componentSamples[3].visible" bind-component="EventsSampleComponent"></div>
+            <div bind-if="componentSamples[4].visible" bind-component="ConditionsSampleComponent"></div>
+            <div bind-if="componentSamples[5].visible" bind-component="HttpClientSampleComponent"></div>
+            <div bind-if="componentSamples[6].visible" bind-component="PropertyBindingsSampleComponent"></div>
+            <div bind-if="componentSamples[7].visible" bind-component="FormsBindingSampleComponent"></div>
+            <div bind-if="componentSamples[9].visible" bind-component="DropDownComponent"></div>
             
             <div bind-if="codingSectionVisible">
                 <div class="section-content">
