--- a/src/app/components/analogue-clock/analogue-clock.component.scss
+++ b/src/app/components/analogue-clock/analogue-clock.component.scss
@@ -1,29 +1,20 @@
+[bind-component="AnalogueClockComponent"] {
+    position: absolute;
+    top: 10%;
+    left: 90%;
+    margin: 10px;
+    box-shadow: 1px 1px 30px black;
+    padding: 10px;
+    border-radius: 30px;
+    z-index: 9999;
+}
+
 .analogue-clock-component-root {
     // Options
     $black: #1b1e23;
-    $size: 200px;
+    $size: 120px;
     $white: #f4eed7;
     $feature : #4b9aaa;
-
-    html,
-    body {
-        height: 100%;
-    }
-    body {
-        background: $black;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-family: sans-serif;
-        color: white;
-    }
-
-    p {
-        color: $white;
-        font-size: 0.8em;
-        opacity: 0.75;
-    }
 
     .clock {
         height: $size;
