--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -38,3 +38,31 @@ html, body, [bind-component="AppRootComponent"] {
 *:focus-visible {
     outline: none;
 }
+
+.toaster-notification {
+    position: fixed;
+    right: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 5000;
+    opacity: 0;
+
+    background-color: rgba(0, 0, 0, 0.63);
+    color: white;
+    border-bottom: 2px dashed transparent;
+    box-shadow: 3px 3px 8px black;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    transition: all 0.3s ease;
+
+    .close-button {
+        margin-left: 10px;
+        background-color: red;
+        color: white;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+}
