--- a/src/app/components/analogue-clock/analogue-clock.component.scss
+++ b/src/app/components/analogue-clock/analogue-clock.component.scss
@@ -1,11 +1,20 @@
 [bind-component="AnalogueClockComponent"] {
     position: absolute;
     top: 10%;
-    left: 80%;
+    left: 90%;
     box-shadow: 1px 1px 30px #000;
     border-radius: 30px;
     z-index: 9999;
     padding: 10px;
+
+    background-color: rgba(0, 0, 0, 0.63);
+    color: white;
+    border-bottom: 2px dashed transparent;
+    box-shadow: 3px 3px 8px black;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .analogue-clock-component-root {
