--- a/src/app/views/notifications-sample/notifications-sample.component.html
+++ b/src/app/views/notifications-sample/notifications-sample.component.html
@@ -1,8 +1,14 @@
 <div class="notifications-sample">
     <div class="section-content">
         <label class="label medium">Notifications sample</label>
-        <button bind-event="click:onCreateToasterMessage">
-            Create toaster message
+        <button bind-event="click:onCreateInfoMessage">
+            Create info
+        </button>
+        <button bind-event="click:onCreateSuccessMessage">
+            Create info
+        </button>
+        <button bind-event="click:onCreateErrorMessage">
+            Create info
         </button>
     </div>
 </div>
